--- a/Client/SCSS/Pages/_Delivery.scss
+++ b/Client/SCSS/Pages/_Delivery.scss
@@ -1,75 +1,6 @@
-// .section-delivery {
-//   @include container();
-//   height: 400px;
-//   display: flex; //for menu
-//   flex-direction: column;
-//   align-items: center;
-//   justify-content: center;
-//   gap: 20px;
-//   .address {
-//     margin-bottom: 4px;
-//     font-size: 38px;
-//     line-height: 20px;
-//     font-family: "Flame Bold";
-//     color: rgb(80, 35, 20);
-//   }
-
-//   input {
-//     width: 100%;
-//     outline: none;
-//     cursor: auto;
-//     background-color: rgb(255, 255, 255);
-//     height: 48px;
-//     border: 2px solid rgb(198, 198, 145);
-//     &:hover {
-//       border: 2px solid rgb(136, 136, 99);
-//       transition: 0.3s;
-//     }
-//     padding-left: 10px;
-
-//     &::placeholder {
-//       font-size: 14px;
-//       font-family: "Flame Sans";
-//       color: rgb(80, 35, 20);
-//     }
-//   }
-
-//   .checkout {
-//     font-family: "Flame Sans";
-//     font-size: 15px;
-//     color: red;
-//   }
-
-//   .terms {
-//     font-size: 14px;
-//     font-family: "Flame Sans";
-//     color: rgb(80, 35, 20);
-
-//     a {
-//       color: red;
-//       text-decoration: none;
-//     }
-//   }
-
-//   button {
-//     &:hover {
-//       opacity: 50%;
-//       transition: 0.3s;
-//     }
-//     cursor: pointer;
-
-//     background-color: rgb(214, 35, 0);
-//     width: 300px;
-//     height: 55px;
-//     border-radius: 9999px;
-//     border: none;
-//     font-size: 18px;
-//     color: white;
-//     font-family: "Flame Sans";
-//     font-weight: bold;
-//   }
-// }
-
+.delivery-body{
+  min-height: 100vh;
+}
 .delivery-navbar {
   background-color: rgb(214, 35, 0);
   height: 40px;
@@ -188,13 +119,20 @@
   }
 }
 
+.nearby-content,
 .favorites-content,
 .recents-content {
   display: none;
+
 }
 
+
 .nearby-content {
+
   @include container();
+  .hidden{
+    height: 80px;
+  }
   .location {
     height: 100%;
     border: 2px solid rgb(198, 198, 145);
@@ -213,12 +151,12 @@
       padding-bottom: 8px;
       height: 100%;
       display: flex;
-      justify-content: space-between;
 
       .left {
         display: flex;
         flex-direction: column;
         justify-content: center;
+        width: 100%;
 
         h1 {
           margin-bottom: 4px;
@@ -311,12 +249,19 @@
           }
         }
       }
+    }
+
+    .clicked {
+      display: flex;
     }
   }
 }
 
 .favorites-content {
   @include container();
+  .hidden{
+    height: 80px;
+  }
   .location {
     height: 100%;
     border: 2px solid rgb(198, 198, 145);
@@ -335,12 +280,12 @@
       padding-bottom: 8px;
       height: 100%;
       display: flex;
-      justify-content: space-between;
 
       .left {
         display: flex;
         flex-direction: column;
         justify-content: center;
+        width: 100%;
 
         h1 {
           margin-bottom: 4px;
@@ -433,12 +378,19 @@
           }
         }
       }
+    }
+
+    .clicked {
+      display: flex;
     }
   }
 }
 
 .recents-content {
   @include container();
+  .hidden{
+    height: 80px;
+  }
   .location {
     height: 100%;
     border: 2px solid rgb(198, 198, 145);
@@ -457,12 +409,12 @@
       padding-bottom: 8px;
       height: 100%;
       display: flex;
-      justify-content: space-between;
 
       .left {
         display: flex;
         flex-direction: column;
         justify-content: center;
+        width: 100%;
 
         h1 {
           margin-bottom: 4px;
@@ -555,6 +507,10 @@
           }
         }
       }
+    }
+
+    .clicked {
+      display: flex;
     }
   }
 }
