--- a/Client/SCSS/main.scss
+++ b/Client/SCSS/main.scss
@@ -24,6 +24,16 @@
 @import "./Pages/Order-Pickup";
 @import "./Pages/Order-Delivery";
 @import "./Pages/Payment";
+@import "./Pages/Burgermenu";
+@import "./Pages/Offer";
+@import "./Pages/Account";
+@import "./Pages/About";
+@import "./Pages/Recent-Order";
+
+
+
+
+
 
 
 
