--- a/Client/SCSS/Layout/_navbar.scss
+++ b/Client/SCSS/Layout/_navbar.scss
@@ -27,8 +27,12 @@ header {
       height: 50px;
       .burgermenu {
         text-decoration: none;
-        width: 24px;
+        width: 209.5px;
         height: 24px;
+        @include for-size(mobile){
+          width: 115px;
+        }
+   
         img {
           &:hover {
             opacity: 50%;
@@ -44,11 +48,15 @@ header {
         width: 38px;
         height: 38px;
         img {
-          // position: absolute;
-          // left: 740px;
-          left: 100px;
+          // position: relative;
+          // left: 100px;
           width: 38px;
           height: 38px;
+          // @include for-size(mobile){
+          //   position: relative;
+          //   left: 30px;
+
+          // }
           &:hover {
             opacity: 50%;
             transition: 0.3s;
