--- a/Client/SCSS/Pages/_Location.scss
+++ b/Client/SCSS/Pages/_Location.scss
@@ -1,16 +1,23 @@
+.location-body{
+  min-height: 100vh;
+}
+
 .location-footer {
   position: fixed;
   bottom: 0;
   width: 100%;
   background-color: rgb(245, 235, 220);
-  z-index: 1000; // Set a higher z-index to ensure it stays on top of other elements
-  transition: bottom 0.3s ease-in-out; // Smooth transition effect
+  z-index: 1000; 
+  transition: bottom 0.3s ease-in-out; 
+  
 }
 
 .location-footer {
   box-shadow: rgba(0, 0, 0, 0.1) 0px -1px 1px;
 
+
   .footer {
+
     @include container();
     display: flex;
     padding: 20px;
@@ -20,13 +27,7 @@
       display: flex;
       align-items: center;
       flex-direction: column;
-      &:nth-child(3) {
-        display: none;
-
-        @include for-size(mobile) {
-          display: flex;
-        }
-      }
+   
       a {
         display: flex;
         flex-direction: column;
@@ -181,171 +182,19 @@
   }
 }
 
-// .location-locations {
-//   @include container();
-
-//   .top {
-//     margin-top: 5px;
-//     display: flex;
-//     a {
-//       width: 100%;
-
-//       button {
-//         cursor: pointer;
-//         font-size: 16px;
-//         line-height: 24px;
-//         color: rgb(80, 35, 20);
-//         width: 100%;
-//         height: 48px;
-//         background-color: transparent;
-//         border: none;
-//         font-family: "Flame Sans";
-//       }
-//       .nearby {
-//         color: red;
-//         border-bottom: 3px solid red;
-//         font-weight: bold;
-//       }
-//     }
-//   }
-
-//   .bottom {
-//     .location.active {
-//       // for js
-
-//       .location-bottom {
-//         display: initial;
-//       }
-//     }
-//     .location {
-//       height: 100%;
-//       border: 2px solid rgb(198, 198, 145);
-//       padding-right: 12px;
-//       padding-left: 12px;
-//       padding-top: 8px;
-//       padding-bottom: 8px;
-//       background-color: rgb(255, 255, 255);
-//       display: flex;
-//       flex-direction: column;
-//       gap: 10px;
-//       .location-top {
-//         padding-right: 12px;
-//         padding-left: 12px;
-//         padding-top: 8px;
-//         padding-bottom: 8px;
-//         height: 100%;
-//         display: flex;
-//         justify-content: space-between;
-
-//         .left {
-//           display: flex;
-//           flex-direction: column;
-//           justify-content: center;
-
-//           h1 {
-//             margin-bottom: 4px;
-//             font-size: 18px;
-//             line-height: 20px;
-//             font-family: "Flame Bold";
-//             color: rgb(80, 35, 20);
-//           }
-
-//           .mid {
-//             span {
-//               font-size: 13px;
-//               font-family: "Flame Sans";
-//               line-height: 20px;
-//               color: rgb(80, 35, 20);
-//             }
-//           }
-
-//           .functionality {
-//             font-size: 13px;
-//             font-family: "Flame Sans";
-//             line-height: 20px;
-//             color: rgb(80, 35, 20);
-//           }
-//         }
-
-//         .right {
-//           display: flex;
-//           justify-content: center;
-//           align-items: center;
-//           height: 100px;
-//           button {
-//             height: 24px;
-//             background-color: transparent;
-//             border: none;
-//             img {
-//               width: 24px;
-//               height: 24px;
-//               display: none;
-//             }
-
-//             img.active {
-//               transition: 1s;
-//               display: initial;
-//             }
-//           }
-//         }
-//       }
-
-//       .location-bottom {
-//         display: none;
-//         .order-menu {
-//           display: flex;
-//           justify-content: center;
-//           align-items: center;
-//           width: 100%;
-//           gap: 50px;
-
-//           a {
-//             display: flex;
-//             flex-direction: column;
-//             align-items: center;
-//             justify-content: center;
-//             gap: 10px;
-//             width: 60px;
-//             font-family: "Flame Sans";
-//             line-height: 20px;
-//             color: rgb(80, 35, 20);
-//             text-decoration: none;
-//             font-weight: bold;
-
-//             button {
-//               border: none;
-//               height: 50px;
-//               width: 50px;
-//               background-color: red;
-//               border-radius: 9999px;
-//               display: flex;
-//               align-items: center;
-//               justify-content: center;
-
-//               img {
-//                 width: 24px;
-//               }
-//             }
-//             span {
-//               font-family: "Flame Sans";
-//               line-height: 20px;
-//               color: rgb(80, 35, 20);
-//             }
-//           }
-//         }
-//       }
-//     }
-//   }
-// }
-
-
+.nearby-content,
 .favorites-content,
 .recents-content {
   display: none;
+
 }
 
 .nearby-content {
+
   @include container();
+  .hidden{
+    height: 80px;
+  }
   .location {
     height: 100%;
     border: 2px solid rgb(198, 198, 145);
@@ -468,6 +317,9 @@
 
 .favorites-content {
   @include container();
+  .hidden{
+    height: 80px;
+  }
   .location {
     height: 100%;
     border: 2px solid rgb(198, 198, 145);
@@ -591,6 +443,9 @@
 
 .recents-content {
   @include container();
+  .hidden{
+    height: 80px;
+  }
   .location {
     height: 100%;
     border: 2px solid rgb(198, 198, 145);
