--- a/Client/SCSS/main.scss
+++ b/Client/SCSS/main.scss
@@ -34,6 +34,8 @@
 @import "./Pages/DeliveryOrderDetail";
 @import "./Pages/UserOrder";
 @import "./Pages/Selector";
+@import "./Pages/Order-Delivered";
+@import "./Pages/AdminPanel";
 
 
 
